Auto tool creation

--- a/INSTALL
+++ b/INSTALL
@@ -12,6 +12,14 @@ without warranty of any kind.
 Basic Installation
 ==================
 
+** prerequisites - Automake
+run the following:
+``` 
+aclocal
+autoconf
+automake --add-missing 
+```
+
    Briefly, the shell command './configure && make && make install'
 should configure, build, and install this package.  The following
 more-detailed instructions are generic; see the 'README' file for
